--- a/code/tables.rmd
+++ b/code/tables.rmd
@@ -79,36 +79,61 @@ papers <- c('Klein et al. (2014)',
 
 description <- c("Two correlational effects: 'Gender math attitude' compared implicit attitudes (IAT) towards math between genders and 'IAT correlation math' correlated implicit attitudes with self-reported measures. The remainder were experiments with two independent groups. The groups were primed in some way (Anchoring 1-4; low vs. high category scales; norm of reciprocity; flag priming; currency priming), asked to imagine slightly different situations (Sunk costs; gain vs. loss framing; gambler's fallacy; imagined contact) or asked their agreement with statements presented differently (Allowed vs. forbidden; quote attribution). ", #ML1
             "Several effects were experiments with two independent groups. The groups were either primed in some way (Power and perspective; warmth perceptions; subjective distance interaction), saw slightly different statements (Elaboration likelihood interaction; credentials interaction) or experienced different situations (weight embodiment). Examined interactions were between treatment conditions and participant characteristics. One priming effect (metaphor) compared two treatment groups with a control. One effect was correlational: 'persistence and conscientiousness' was measured by an unsolvable anagram task and self-report respectively. The Stroop task is a within-person experiment with two conditions and the 'Availability' effect asks participants to judge whether some letters are more common in the first or third position.", #ML2
-                 "Verbal overshadowing 1; Independent groups experiment. Participants either described a robber after watching a video or listed countries/capitals. DV = correctly identifying the robber in a lineup.", #RRR1
+                 "Verbal overshadowing 1; Independent two-group experiment. Participants either described a robber after watching a video or listed countries/capitals and after a filler task attempted to identify the robber in a lineup.", #RRR1
             "Verbal overshadowing 2; Different from 1 only in that the filler task took place before the descriptive task instead of after.", #RRR2
-                 "Grammar on intentionality/intention attribution/detailed processing; Independent groups experiment with three outcome variables. Actions either described in imperfect or perfect.", #RRR3
-            "Ego depletion; Independent groups experiment. Participants either assigned to a cognitively demanding task or a neutral and performance was then measured in a subsequent task.", #RRR4
-            "Commitment on neglect/exit; Independent groups experiment with two outcome variables. Participants either primed to think about commitment or independence from partner.", #RRR5
-            "Facial feedback hypothesis; Independent groups experiment. Participants either induced to 'smile' or 'pouth' with a pen and then rated funniness of cartoons. ", #RRR6
-            "Intuitive cooperation; Independent groups experiment. Economic game with money contribution to a common pool either under time pressure or time delay.",
-                 "Professor priming; Participants were assigned to groups and primed with either a 'professor' or 'hooligan' stimuli. DV = Percentage correct trivia answers.") #RRR8
+                 "Grammar on intentionality/intention attribution/detailed processing; Independent two-group experiment with three outcome variables. Actions either described in imperfect or perfect.", #RRR3
+            "Ego depletion; Independent two-group experiment. Participants either assigned to a cognitively demanding task or a neutral, and performance was then measured in a subsequent cognitive task.", #RRR4
+            "Commitment on neglect/exit; Independent two-group experiment with two outcome variables. Participants either primed to think about commitment to or independence from partner.", #RRR5
+            "Facial feedback hypothesis; Independent two-group experiment. Participants either induced to 'smile' or 'pouth' with a pen and then rated funniness of cartoons. ", #RRR6
+            "Intuitive cooperation; Independent two-group experiment. Economic game with money contribution to a common pool either under time pressure or time delay.",
+                 "Professor priming; Independent two-group experiment. Participants primed with either a 'professor' or 'hooligan' stimuli. Outcome was percentage correct trivia answers.") #RRR8
 
-sample_settings <- c("9 online, 28 in lab, 25 US, Only 3/36 labs did not recruit explicitly from student populations. 25/36>94% from university students, 7 unclear, 2 non-students", #https://osf.io/g3udn/, ML1
-                     "1 mturk sample, rest students, 2 Canadian samples, remainder US. Only mturk sample was online" #ML2, need to add the rest later
-                     )
+
+US_online <- dat %>% #Extract the (max when multiple effects) number of US/online labs per RP
+  group_by(rp, effect) %>% 
+  summarize(US = sum(country == "USA"),
+            online = sum(in_lab == 0)) %>% 
+  group_by(rp) %>% 
+  summarize(US = max(US),
+            online = max(online)) %>% 
+  ungroup() %>% select(US, online)
+
+sample_settings <- c("26/36 samples were primarily university students, 3 general population and 7 undescribed. 9/36 samples were online, including all the general population ones.", #https://osf.io/g3udn/, ML1
+                     "20/21 samples were university students, 1 general population which was also the only online sample.", #Ml3
+                     "31/32 samples were undergraduate students between 18-25, 1 general population which was also the only online sample.", #RRR1
+                     "22/23 samples were undergraduate students between 18-25, 1 general population which was also the only online sample.", #RRR2
+                     "11/12 samples were undergraduate students mostly between 18-25, one of which was online. 1 sample was a broader online sample.", #RRR3
+                     "All samples consisted of in-lab undergraduate students", #RRR4
+                     "All samples consisted of in-lab undergraduate students between 18-25", #RRR5
+               "All but one sample explicitly consisted of students and all took place in-lab. The last sample was recruited at university grounds.", #RRR6
+               'All samples consisted of in-lab undergraduate students between 18-34.', #RRR7
+                     "All samples consisted of in-lab undergraduate students betweeb 18-25") #RRR8
+
+#1) what kind of samples
 
 summary.table <- dat %>% 
   group_by(rp) %>% 
-  summarize(k = n_distinct(Site),
-            Countries = n_distinct(country), 
+  summarize(Countries = n_distinct(country),
+            k = n_distinct(Site), 
             Effects = n_distinct(effect),
             Participants = if(Effects == 1){sum(Ntotal)}
                            else{sum(Ntotal) / Effects}) %>% #average across effects
   mutate(Paper = papers,
-         'Description of Effects' = description) %>% 
-  select(RP = rp, Paper, everything()) #change order of columns
+         'Sample and Settings' = sample_settings,
+         'Description of Effects' = description,
+         'K (US)' = paste0(k, " (", US_online$US, ")")) %>% 
+  select(RP = rp, Paper, Countries,'K (US)', everything(), -k) #change order of columns
 
-summary.table %>% knitr::kable("latex", booktabs = T, digits = 0) %>% 
-  kable_styling("scale_down", font_size = 7) %>% 
-  column_spec(2, width = "8em") %>% #specify width of paper column
-  column_spec(7, width = "25em") %>% 
+summary.table %>% knitr::kable("latex", 
+                               booktabs = TRUE,
+                               digits = 0) %>% 
+  kable_styling("repeat_header", font_size = 7) %>% 
+  column_spec(2, width = "7em") %>% #specify width of paper column 
+  column_spec(7, width = "16em") %>% 
+  column_spec(8, width = "30em") %>% 
   footnote(threeparttable = TRUE,
-           general = "For studies with several effects the number of participants is the average across effects, rounded to the closest whole number. Participant numbers are those used for primary analyses by original authors (i.e., after exclusions). RP = Replication Project, k = no. primary studies, ML = Many Labs, RRR = Registered Replication Report. Code to reproduce table: osf.io/kf6pt/")
+           general = "For studies with several effects the number of participants is the average across effects, rounded to the closest whole number. Participant numbers are those used for primary analyses by original authors (i.e., after exclusions). RP = Replication Project, K (US) = no. primary studies (number of US studies), ML = Many Labs, RRR = Registered Replication Report. Code to reproduce table: osf.io/kf6pt/") %>% 
+  landscape()
 ```
 
 ```{r prep-heterogeneity-table, cache = TRUE}
