--- a/code/figures.rmd
+++ b/code/figures.rmd
@@ -30,24 +30,15 @@ dat <- read_csv("../data/collated_summary_data.csv")
 source("helper_functions_tables_figures.r") #Load functions to prep data for figures
 ```
 
-```{r transform_df}
+```{r transform_effect_and_compute_rma}
 #Transform effect sizes to raw correlations
 #'transform_MA' is a sourced function
 res <- dat %>% 
   split(.$effect) %>%  #separate by effect, necessary step otherwise the function is applied overall
   map_dfr(transform_MA, .id = "effect") #apply function and transform back from list to dataframe
 
-```
-
-```{r MA_df}
-summarizer <- function(x){#Z-transformation not recommended by Jacobs and Viechtbauer (2017) for biserial correlations, p. 176
-  fitr <- rma(yi = x$r, vi = x$vi, data = x) #rma for biserial and pearson correlations (distinct per effect!)
-  data.frame(r = fitr$b[[1]], tau2r = fitr$tau2, I2 = fitr$I2, H2trunc = fitr$H2, H2 = fitr$QE / (fitr$k - 1)) 
-}
-#Default method of metafor for calculating H2 is truncated at one. Alternative method for calculating H2 provides information also on excessive homogeneity, i.e, less variability than expected by chance (that is, does not have a lower limit of 1). This method approximates H2 as if we were using the Dersimonian and Laird estimate of tau2, although we use REML. See Higgins & Thompson, 2002 and ?print.rma.uni.
-
-#Higgins, J., & Thompson, S. G. (2002). Quantifying heterogeneity in a meta-analysis. Statistics in medicine, 21(11), 1539-1558.
-  
+#compute random effect meta-analysis of transformed effects
+#'summarizer' is a sourced function
 res2 <- res %>% 
   split(.$effect) %>%  #separate by effect, necessary step otherwise the function is applied overall
   map_dfr(summarizer, .id = "effect") %>% 
@@ -60,9 +51,9 @@ cor.test(res2$I2, res2$r) #pearson I2
 
 I2_fit <- summary(lm(I2 ~ r, data = res2)) #for annotating figures
 
-cor.test(res2$tau2r, res2$r) #pearson tau2
+cor.test(res2$tau2, res2$r) #pearson tau2
 
-tau2_fit <- summary(lm(tau2r ~ r, data = res2))
+tau2_fit <- summary(lm(tau2 ~ r, data = res2))
 
 cor.test(res2$H2, res2$r) #pearson H2
 
@@ -154,7 +145,7 @@ effect_het
 ```
 
 ```{r r_vs_tau2, fig.asp = 0.618, cache = TRUE}
-r_tau2 <- ggplot(res2, aes(x = r, y = tau2r)) + 
+r_tau2 <- ggplot(res2, aes(x = r, y = tau2)) + 
   geom_point(alpha = 0.5) +
   geom_smooth(method = "lm", se = TRUE, color = "black") +
   geom_text(x = 0.14, y = Inf, vjust = 7, size = 3.5, fontface = "italic", label = paste("b = ", format(round(tau2_fit$coefficients[2, 1], 2), nsmall = 2), ", r = ", format(round(sqrt(tau2_fit$r.squared), 2), nsmall = 2))) +
@@ -266,6 +257,8 @@ ggplot(dat3, aes(x = tau, y = I2, group = effect, color = effect_type)) +
 
 
 ```{r Density_plot, fig.asp= 0.618, cache = TRUE}
+
+#1) I2 plot----
 dens <- readRDS("../data/power_simulation_results.RDS")
 names(dens) <-  sort(unique(dat$effect))
 
@@ -288,7 +281,7 @@ observed <- dat %>%
   select(effect, I2 = s_I2) %>%
   mutate(Heterogeneity = "Observed")
 
-ggplot(I2_dist, aes(x = I2, group = Heterogeneity, fill = Heterogeneity, linetype = Heterogeneity)) +
+I2_plot <- ggplot(I2_dist, aes(x = I2, group = Heterogeneity, fill = Heterogeneity, linetype = Heterogeneity)) +
   geom_histogram(data = observed, aes(y = ..density.., x = I2), bins = 100, alpha = 1) +
   geom_density(alpha = 0.3) +
   theme_classic() +
@@ -309,5 +302,59 @@ ggplot(I2_dist, aes(x = I2, group = Heterogeneity, fill = Heterogeneity, linetyp
   guides(fill = guide_legend(override.aes = list(alpha = c(rep(0.3, 4), 1))))
 
 #ggsave("../figures/density-I2.pdf", dpi = 600, height =  4, width = 6.47, device = cairo_pdf())
+
+#2) tau2 plot----
+
+dens_tau2 <- readRDS("../data/biserial_simulation_results.RDS")
+names(dens_tau2) <-  sort(unique(dat$effect))
+
+#Simulated data at various heterogeneity levels, prep for plotting
+tau2_dist <- dens_tau2 %>% 
+  bind_rows(.id = "effect") %>% 
+  rename(Heterogeneity = tau_index) %>% 
+  mutate(Heterogeneity = recode(Heterogeneity,
+                            '1' = "Zero",
+                            '2' = "Small",
+                            '3' = "Medium",
+                            '4' = "Large"),
+         Heterogeneity = as.factor(Heterogeneity))
+
+#Observed tau22 estimates, i.e, results from main table, see table.rmd
+#Effects estimated with sourced function 'summarizer'
+observed <- dat %>% 
+  split(.$effect) %>%  
+  map_dfr(summarizer, .id = "effect") %>% 
+  select(effect, tau2 = tau2) %>%
+  mutate(Heterogeneity = "Observed")
+
+tau2_plot <- ggplot(tau2_dist, aes(x = tau2, group = Heterogeneity, fill = Heterogeneity, linetype = Heterogeneity)) +
+  geom_histogram(data = observed, aes(y = ..density.., x = I2), bins = 100, alpha = 1) +
+  geom_density(alpha = 0.3) +
+  theme_classic() +
+  coord_cartesian(xlim = c(0, 100))  +
+  scale_fill_brewer(palette = "Dark2",
+                    breaks = c("Zero", "Small", "Medium", "Large", "Observed"),
+                    labels = c("Zero (0%)", "Small (25%)", "Medium (50%)", "Large (75%)", "Observed")) +
+  scale_linetype_manual(values = c( "dotdash", "dotted", "solid", "solid", "dashed"),
+                        breaks = c("Zero", "Small", "Medium", "Large", "Observed"), 
+                        labels = c("Zero (0%)", "Small (25%)", "Medium (50%)", "Large (75%)", "Observed")) +
+  scale_color_brewer(palette = "Dark2", 
+                     breaks = c("Zero", "Small", "Medium", "Large", "Observed"),
+                     labels = c("Zero (0%)", "Small (25%)", "Medium (50%)", "Large (75%)", "Observed")) +
+  theme(legend.position = c(0.85, 0.71),
+        legend.background = element_rect(linetype = "solid", color = "black")) +
+  scale_y_continuous(name = "Density") +
+  scale_x_continuous(name = expression(paste(italic(tau)^2," index", sep = ""))) +
+  guides(fill = guide_legend(override.aes = list(alpha = c(rep(0.3, 4), 1))))
+
+#ggsave("../figures/density-tau2.pdf", dpi = 600, height =  4, width = 6.47, device = cairo_pdf())
+
+#3) combine I2-tau2-density-plots----
+
+densities <- plot_grid(I2_plot, tau2_plot, nrow = 2, labels = c("a", "b"), align = "v") #combine plots
+densities
+#save_plot("../figures/densities_het.png", densities,
+#          nrow = 2, base_height = 5, base_width = 5, dpi = 600)
+
 ```
 
