--- a/code/tables.rmd
+++ b/code/tables.rmd
@@ -154,14 +154,9 @@ dat2 <- dat %>%
   split(.$effect) %>%  #separate by effect, necessary step otherwise the function is applied overall
   map_dfr(transform_MA, .id = "effect") #apply function and transform back from list to dataframe
 
-summarizer <- function(x){ #function to run rma on transformed biserial and correlations
-  fitr <- rma(yi = x$r, vi = x$vi, data = x) #rma for biserial and pearson correlations (distinct per effect!)
-  ci <- confint(fitr)$random[c(1, 3), ]
-  data.frame(r = fitr$b[[1]], tau2 = fitr$tau2, tau2.lb = ci[1, 2], tau2.ub = ci[1, 3],
-             I2 = fitr$I2, I2.lb = ci[2, 2], I2.ub = ci[2, 3]) 
-}
 
 #estimate tau2 for tranformed biserial and pearson's correlations
+#'summarizer' is a sourced function
 res2 <- dat2 %>% 
   split(.$effect) %>%  #separate by effect, necessary step otherwise the function is applied overall
   map_dfr(summarizer, .id = "effect")
