--- a/code/figures.rmd
+++ b/code/figures.rmd
@@ -125,7 +125,7 @@ I2 <- ggplot(res2, aes(x = r, y = I2)) +
   geom_text(x = 0.14, y = Inf, vjust = 7, fontface = "italic", size = 3.5, label = paste0("b = ", format(round(I2_fit$coefficients[2, 1], 2), nsmall = 2), ", r = ", format(round(sqrt(I2_fit$r.squared), 2), nsmall = 2))) +
   theme_classic() +
   scale_y_continuous(name = expression(paste(italic(I)^2," index"))) +
-  scale_x_continuous(name = expression(paste("Biserial correlation ", italic(r))))
+  scale_x_continuous(name = expression(paste("Biserial and pearson correlations ")))
 
 H2 <- ggplot(res2, aes(x = r, y = H2)) + 
   geom_point(alpha = 0.5) +
@@ -133,7 +133,7 @@ H2 <- ggplot(res2, aes(x = r, y = H2)) +
   geom_text(x = 0.14, y = Inf, vjust = 7, size = 3.5, fontface = "italic", label = paste("b = ", format(round(H2_fit$coefficients[2, 1], 2), nsmall = 2), ", r = ", format(round(sqrt(H2_fit$r.squared), 2), nsmall = 2))) +
   theme_classic() +
   scale_y_continuous(name = expression(paste(italic(H)^2," index", sep = ""))) +
-  scale_x_continuous(name = expression(paste("Biserial correlation ", italic(r))))
+  scale_x_continuous(name = expression(paste("Biserial and pearson correlations ")))
 
 
 effect_het <- plot_grid(I2, H2, nrow = 2, labels = c("a", "b"), align = "v") #combine plots
@@ -151,7 +151,7 @@ r_tau2 <- ggplot(res2, aes(x = r, y = tau2)) +
   geom_text(x = 0.14, y = Inf, vjust = 7, size = 3.5, fontface = "italic", label = paste("b = ", format(round(tau2_fit$coefficients[2, 1], 2), nsmall = 2), ", r = ", format(round(sqrt(tau2_fit$r.squared), 2), nsmall = 2))) +
   theme_classic() +
   scale_y_continuous(name = expression(paste("Between studies variance ", italic(tau)^2))) +
-  scale_x_continuous(name = expression(paste("Biserial correlation ", italic(r))))
+  scale_x_continuous(name = expression(paste("Biserial and pearson correlations ")))
 
 r_tau2 
 # ggsave("../figures/r_tau2.png", dpi = 600, height =  4 , width = 6.47)
@@ -166,6 +166,23 @@ tau2_per_type <- dat %>%
   split(.$effect) %>%  
   map_dfr(est_heterogen_smd_raw, .id = "effect")
 
+#effects that were transformed from OR to SMD
+OR2d <- c('Allowed vs. forbidden', 'Gain vs. loss framing', #originally transformed to SMD
+           'Norm of reciprocity', 'Low vs. high category scales') #refit as OR
+
+OR_fit <- function(x){ #fit rma to odds raios
+  fit <- rma(measure = "OR", ai = outcome_t1, bi = outcome_t2, ci = outcome_c1, di = outcome_c2, n1i = ntreatment, n2i = ncontrol,  data = x)
+  hetero <- confint(fit)$random[c(1, 3), ] 
+  data.frame(eff_size = fit$b[[1]], #effect size (point estimate) 
+             s_I2 = hetero[2, 1], s_ci.lb = hetero[2, 2], s_ci.ub = hetero[2, 3],
+             tau2 = hetero[1, 1], tau2_ci.lb = hetero[1, 2], tau2_ci.ub = hetero[1, 3])}
+
+fit_OR <- dat %>% 
+  filter(effect %in% OR2d) %>% 
+  split(.$effect) %>% 
+  map_dfr(OR_fit, .id = "effect")
+
+
 tau2_per_type <- dat %>% #This is to add the effect_type names
   select(effect, effect_type) %>% 
   distinct() %>% 
@@ -175,7 +192,10 @@ tau2_per_type <- dat %>% #This is to add the effect_type names
                               'Risk difference' = "Risk Difference",
                               'r' = "Correlation")) %>% 
   left_join(tau2_per_type) %>% 
-  mutate(eff_size = abs(eff_size)) #need the absolute values for plotting
+  filter(!effect %in% OR2d) %>% #drop old SMD converted OR
+  bind_rows(fit_OR) %>% #and instead add OR meta-analyzed as OR
+  mutate(effect_type = ifelse(is.na(effect_type), "Odds Ratio", effect_type),
+         eff_size = abs(eff_size)) #need the absolute values for plotting
 
 
 fitter <- function(df){ #function to fit correlations for annotating facet plots
@@ -189,8 +209,6 @@ labels <- tau2_per_type %>%
   map_dfr(fitter, .id = "effect_type") %>% 
   mutate(lab = paste0("b = ", b, ", r = ", r)) #put output into one variable for improved plotting
   
-
-    
 
     
 tau2_facet <- ggplot(tau2_per_type, aes(x = eff_size, y = tau2)) + 
@@ -305,56 +323,56 @@ I2_plot <- ggplot(I2_dist, aes(x = I2, group = Heterogeneity, fill = Heterogenei
 
 #2) tau2 plot----
 
-dens_tau2 <- readRDS("../data/biserial_simulation_results.RDS")
-names(dens_tau2) <-  sort(unique(dat$effect))
-
-#Simulated data at various heterogeneity levels, prep for plotting
-tau2_dist <- dens_tau2 %>% 
-  bind_rows(.id = "effect") %>% 
-  rename(Heterogeneity = tau_index) %>% 
-  mutate(Heterogeneity = recode(Heterogeneity,
-                            '1' = "Zero",
-                            '2' = "Small",
-                            '3' = "Medium",
-                            '4' = "Large"),
-         Heterogeneity = as.factor(Heterogeneity))
-
-#Observed tau22 estimates, i.e, results from main table, see table.rmd
-#Effects estimated with sourced function 'summarizer'
-observed <- dat %>% 
-  split(.$effect) %>%  
-  map_dfr(summarizer, .id = "effect") %>% 
-  select(effect, tau2 = tau2) %>%
-  mutate(Heterogeneity = "Observed")
-
-tau2_plot <- ggplot(tau2_dist, aes(x = tau2, group = Heterogeneity, fill = Heterogeneity, linetype = Heterogeneity)) +
-  geom_histogram(data = observed, aes(y = ..density.., x = I2), bins = 100, alpha = 1) +
-  geom_density(alpha = 0.3) +
-  theme_classic() +
-  coord_cartesian(xlim = c(0, 100))  +
-  scale_fill_brewer(palette = "Dark2",
-                    breaks = c("Zero", "Small", "Medium", "Large", "Observed"),
-                    labels = c("Zero (0%)", "Small (25%)", "Medium (50%)", "Large (75%)", "Observed")) +
-  scale_linetype_manual(values = c( "dotdash", "dotted", "solid", "solid", "dashed"),
-                        breaks = c("Zero", "Small", "Medium", "Large", "Observed"), 
-                        labels = c("Zero (0%)", "Small (25%)", "Medium (50%)", "Large (75%)", "Observed")) +
-  scale_color_brewer(palette = "Dark2", 
-                     breaks = c("Zero", "Small", "Medium", "Large", "Observed"),
-                     labels = c("Zero (0%)", "Small (25%)", "Medium (50%)", "Large (75%)", "Observed")) +
-  theme(legend.position = c(0.85, 0.71),
-        legend.background = element_rect(linetype = "solid", color = "black")) +
-  scale_y_continuous(name = "Density") +
-  scale_x_continuous(name = expression(paste(italic(tau)^2," index", sep = ""))) +
-  guides(fill = guide_legend(override.aes = list(alpha = c(rep(0.3, 4), 1))))
-
-#ggsave("../figures/density-tau2.pdf", dpi = 600, height =  4, width = 6.47, device = cairo_pdf())
-
-#3) combine I2-tau2-density-plots----
-
-densities <- plot_grid(I2_plot, tau2_plot, nrow = 2, labels = c("a", "b"), align = "v") #combine plots
-densities
-#save_plot("../figures/densities_het.png", densities,
-#          nrow = 2, base_height = 5, base_width = 5, dpi = 600)
+# dens_tau2 <- readRDS("../data/biserial_simulation_results.RDS")
+# names(dens_tau2) <-  sort(unique(dat$effect))
+# 
+# #Simulated data at various heterogeneity levels, prep for plotting
+# tau2_dist <- dens_tau2 %>% 
+#   bind_rows(.id = "effect") %>% 
+#   rename(Heterogeneity = tau_index) %>% 
+#   mutate(Heterogeneity = recode(Heterogeneity,
+#                             '1' = "Zero",
+#                             '2' = "Small",
+#                             '3' = "Medium",
+#                             '4' = "Large"),
+#          Heterogeneity = as.factor(Heterogeneity))
+# 
+# #Observed tau22 estimates, i.e, results from main table, see table.rmd
+# #Effects estimated with sourced function 'summarizer'
+# observed <- dat %>% 
+#   split(.$effect) %>%  
+#   map_dfr(summarizer, .id = "effect") %>% 
+#   select(effect, tau2 = tau2) %>%
+#   mutate(Heterogeneity = "Observed")
+# 
+# tau2_plot <- ggplot(tau2_dist, aes(x = tau2, group = Heterogeneity, fill = Heterogeneity, linetype = Heterogeneity)) +
+#   geom_histogram(data = observed, aes(y = ..density.., x = I2), bins = 100, alpha = 1) +
+#   geom_density(alpha = 0.3) +
+#   theme_classic() +
+#   coord_cartesian(xlim = c(0, 100))  +
+#   scale_fill_brewer(palette = "Dark2",
+#                     breaks = c("Zero", "Small", "Medium", "Large", "Observed"),
+#                     labels = c("Zero (0%)", "Small (25%)", "Medium (50%)", "Large (75%)", "Observed")) +
+#   scale_linetype_manual(values = c( "dotdash", "dotted", "solid", "solid", "dashed"),
+#                         breaks = c("Zero", "Small", "Medium", "Large", "Observed"), 
+#                         labels = c("Zero (0%)", "Small (25%)", "Medium (50%)", "Large (75%)", "Observed")) +
+#   scale_color_brewer(palette = "Dark2", 
+#                      breaks = c("Zero", "Small", "Medium", "Large", "Observed"),
+#                      labels = c("Zero (0%)", "Small (25%)", "Medium (50%)", "Large (75%)", "Observed")) +
+#   theme(legend.position = c(0.85, 0.71),
+#         legend.background = element_rect(linetype = "solid", color = "black")) +
+#   scale_y_continuous(name = "Density") +
+#   scale_x_continuous(name = expression(paste(italic(tau)^2," index", sep = ""))) +
+#   guides(fill = guide_legend(override.aes = list(alpha = c(rep(0.3, 4), 1))))
+# 
+# #ggsave("../figures/density-tau2.pdf", dpi = 600, height =  4, width = 6.47, device = cairo_pdf())
+# 
+# #3) combine I2-tau2-density-plots----
+# 
+# densities <- plot_grid(I2_plot, tau2_plot, nrow = 2, labels = c("a", "b"), align = "v") #combine plots
+# densities
+# #save_plot("../figures/densities_het.png", densities,
+# #          nrow = 2, base_height = 5, base_width = 5, dpi = 600)
 
 ```
 
