--- a/code/tables.rmd
+++ b/code/tables.rmd
@@ -41,7 +41,7 @@ rooted_relabilities <- data.frame(rel, rooted_relabilities)
 rooted_relabilities %>% knitr::kable("latex", booktabs = T, col.names = c("", "$\\rho_{xy}$ = 0", "$\\rho_{xy}$ = .3", "$\\rho_{xy}$ = .5"), escape = FALSE, digits = 2) %>% 
   kable_styling(position = "left") %>% 
   footnote(threeparttable = TRUE, escape = FALSE,
-           general = "Values in cells are observed effect sizes arising from the true effect size $\\\\rho_{xy}$ and measurement reliabilites $\\\\sqrt{R_{xx'}}\\\\times\\\\sqrt{R_{yy'}}$. Code to reproduce table: osf.io/kf6pt/") %>% 
+           general = "Values in cells are observed effect sizes arising from the true effect size $\\\\rho_{xy}$ and measurement reliabilites $\\\\sqrt{R_{xx'}}\\\\times\\\\sqrt{R_{yy'}}$ when sample size is infinite. Increasing differences between observed effect sizes in the columns illustrate the association between effect size, reliability of measurement and heterogeneity.  Code to reproduce table: osf.io/kf6pt/") %>% 
   row_spec(3, hline_after = T)
 
 ```
