--- a/bibliography/bibliography-heterogeneity.bib
+++ b/bibliography/bibliography-heterogeneity.bib
@@ -658,3 +658,22 @@
   year = {2018},
   pages = {443-490}
 }
+
+
+@article{10.1371/journal.pone.0215052,
+  title = {Publication Bias Examined in Meta-Analyses from Psychology and Medicine: {{A}} Meta-Meta-Analysis},
+  volume = {14},
+  issn = {1932-6203},
+  shorttitle = {Publication Bias Examined in Meta-Analyses from Psychology and Medicine},
+  language = {en},
+  number = {4},
+  journal = {PLOS ONE},
+  doi = {10.1371/journal.pone.0215052},
+  author = {{van Aert}, Robbie C. M. and Wicherts, Jelte M. and {van Assen}, Marcel A. L. M.},
+  editor = {Macleod, Malcolm R.},
+  month = apr,
+  year = {2019},
+  pages = {e0215052}
+}
+
+
